--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
     <main>
         <div class="under-nav-bar" >
             <a href="/upload.html">Upload</a>
-            <a href="#">Online Notes</a>
-            <a href="#">Shortl link</a>
+            <a href="/note.html">Online Notes</a>
+            <a href="#">Short link</a>
         </div>
         <div class="container">
             <h2>Create new</h2>
